# backend/control_plane/db/models/__init__.py
@@ -31,5 +31,5 @@ __all__ = [
     'UserAchievement',
     'NeuroImage',
     'UserStatistics',
-    # 'DailyActivity'
+    #
 ]
